--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="stylesheet" href="./style.css">
+    <title>Cada vez mas cerca de las personas - CruzRoja</title>
 </head>
 <body>
-    <p>Prueba de codigo</p>
-    <h2>hola CumMasters hola skudgfosiudgfigu</h2>
+    
 </body>
 </html>
