--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <title>Cada vez mas cerca de las personas - CruzRoja</title>
 </head>
 <body>
-    
+    <h1>Mas cerca de las personas</h1>
 </body>
 </html>
