--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <title>Cada vez mas cerca de las personas - CruzRoja</title>
+    <title>Cada vez mas cerca - CruzRoja</title>
 </head>
 <body>
     <h1>Mas cerca de las personas</h1>
