--- a/Inicio.html
+++ b/Inicio.html
@@ -1,13 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+    <!--<link rel="stylesheet" href="./style.css">-->
     <title>Cada vez mas cerca de las personas - CruzRoja</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap%27');
+
+        body {
+            font-family: Montserrat;
+        }
+
+        .titulo {
+            font-size: 2.25em;
+        }
+
+        .imagenes {
+            width: 100%;
+            height: 50%;
+
+        }
+
+        .columna {
+            width: 30%;
+            padding-left: 4%;
+        }
+
+        section {
+            display: flex;
+            width: 100%;
+        }
+        .xsize{
+            font-size: 0.875rem;
+        }
+    </style>
 </head>
+
 <body>
-    
+    <h2 class="titulo">CAMPAÑAS</h2>
+    <section claa>
+        <div class="columna">
+            <img class="imagenes" src="./img/susderechosenjuego_2021.png" alt="Sus Derechos">
+            <p>Sus Derechos en Juego</p>
+            <p class="xsize">¡Necesitamos 115.000 juguetes para niños y niñas! Desde Cruz Roja Juventud estamos tratando de conseguir
+                que los niños y niñas que se encuentran en familias
+                con dificultades puedan disfrutar de juegos y juguetes.</p>
+        </div>
+        <div class="columna">
+            <img class="imagenes" src="./img/CR_cabecera_web_corts.jpg" alt="La Fuerza V">
+            <p>#LafuerzaV</p>
+            <p class="xsize">Descubre una energía inmensa que nace de las personas y está por todas partes.
+                Descubre la Fuerza del Voluntariado.</p>
+        </div>
+        <div class="columna">
+            <img class="imagenes" src="./img/un-paisaje-en-la-cazuela.jpg" alt="Paisaje en la cazuela">
+            <p>#UnPaisajeEnLaCazuela</p>
+            <p class="xsize">"Un paisaje en la cazuela” es una serie documental de
+                Cruz Roja Española para fomentar una alimentación consciente en la Sociedad.</p>
+        </div>
+    </section>
 </body>
+
 </html>
