--- a/Inicio.html
+++ b/Inicio.html
@@ -11,17 +11,18 @@
         @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap%27');
 
         body {
-            font-family: Montserrat;
+            font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
         }
 
-        .titulo {
+        span .titulo {
             font-size: 2.25em;
+            border-bottom: 5px solid red;
+            width: 100px;
         }
 
         .imagenes {
             width: 100%;
-            height: 50%;
-
+            height: 10em;
         }
 
         .columna {
@@ -31,37 +32,107 @@
 
         section {
             display: flex;
-            width: 100%;
         }
-        .xsize{
+
+        .xsize {
             font-size: 0.875rem;
+        }
+
+        .subtitulo {
+            font-weight: 600;
+        }
+
+        .boton {
+            text-align: center;
+            color: #e20613;
+            border: 0.125rem solid #e20613;
+            width: 8em;
+            justify-content: center;
+            margin: auto;
+        }
+        .botonrojo{
+            color:white;
+            background-color:#e20613;
+            text-align: center;
+            border: 0.125rem solid #e20613;
+            margin: left;
+            justify-content: center;
+            width: 40%;
+        }
+
+        .campañas {
+            width: 50%;
+            padding-left: 10%;
+            margin: auto;
         }
     </style>
 </head>
 
 <body>
-    <h2 class="titulo">CAMPAÑAS</h2>
-    <section claa>
+    <div class="campañas">
+        <span>
+            <h2 class="titulo">CAMPAÑAS</h2>
+        </span>
+        <section>
+            <div class="columna">
+                <img class="imagenes" src="./img/susderechosenjuego_2021.png" alt="Sus Derechos">
+                <p class="subtitulo">Sus Derechos en Juego</p>
+                <p class="xsize">¡Necesitamos 115.000 juguetes para niños y niñas! Desde Cruz Roja Juventud estamos
+                    tratando de conseguir
+                    que los niños y niñas que se encuentran en familias
+                    con dificultades puedan disfrutar de juegos y juguetes.</p>
+            </div>
+            <div class="columna">
+                <img class="imagenes" src="./img/CR_cabecera_web_corts.jpg" alt="La Fuerza V">
+                <p class="subtitulo">#LafuerzaV</p>
+                <p class="xsize">Descubre una energía inmensa que nace de las personas y está por todas partes.
+                    Descubre la Fuerza del Voluntariado.</p>
+            </div>
+            <div class="columna">
+                <img class="imagenes" src="./img/un-paisaje-en-la-cazuela.jpg" alt="Paisaje en la cazuela">
+                <p class="subtitulo">#UnPaisajeEnLaCazuela</p>
+                <p class="xsize">"Un paisaje en la cazuela” es una serie documental de
+                    Cruz Roja Española para fomentar una alimentación consciente en la Sociedad.</p>
+            </div>
+        </section><br>
+        <div class="boton">
+            <p>VER MÁS CAMPAÑAS</p>
+        </div><br>
+        <article>
+            <img class="imagenes" src="./img/Transparencia_v2.png" alt="Transparencia_v2"><br>
+        </article>
+        <span>
+            <h2 class="titulo">PROYECTO PARA DONAR</h2>
+        </span>
+        <section>
         <div class="columna">
-            <img class="imagenes" src="./img/susderechosenjuego_2021.png" alt="Sus Derechos">
-            <p>Sus Derechos en Juego</p>
-            <p class="xsize">¡Necesitamos 115.000 juguetes para niños y niñas! Desde Cruz Roja Juventud estamos tratando de conseguir
-                que los niños y niñas que se encuentran en familias
-                con dificultades puedan disfrutar de juegos y juguetes.</p>
+            <img class="imagenes" src="./img/RUM Atencion migrantes frontera.jpg" alt="Ayuda Ucrania">
+            <p class="subtitulo">Ayuda Crisis en Ucrania</p>
+            <div class="botonrojo">
+                <p>DONA</p>
+            </div>
         </div>
         <div class="columna">
-            <img class="imagenes" src="./img/CR_cabecera_web_corts.jpg" alt="La Fuerza V">
-            <p>#LafuerzaV</p>
-            <p class="xsize">Descubre una energía inmensa que nace de las personas y está por todas partes.
-                Descubre la Fuerza del Voluntariado.</p>
+            <img class="imagenes" src="./img/mayores reducida.jpg" alt="Persona mayor">
+            <p class="subtitulo">Ninguna persona mayor sola</p>
+            <div class="botonrojo">
+                <p>DONA</p>
+            </div>
         </div>
         <div class="columna">
-            <img class="imagenes" src="./img/un-paisaje-en-la-cazuela.jpg" alt="Paisaje en la cazuela">
-            <p>#UnPaisajeEnLaCazuela</p>
-            <p class="xsize">"Un paisaje en la cazuela” es una serie documental de
-                Cruz Roja Española para fomentar una alimentación consciente en la Sociedad.</p>
+            <img class="imagenes" src="./img/49836943871_64305a12b3_o.jpg" alt="Covid">
+            <p class="subtitulo">Plan Responde de Cruz Roja frente al Coronavirus
+            </p>
+            <div class="botonrojo">
+                <p>DONA</p>
+            </div>
         </div>
-    </section>
+        </section><br>
+        <div class="boton">
+            <p>VER MÁS PROYECTOS</p>
+        </div><br>
+    </div>
+
 </body>
 
 </html>
