--- a/Inicio.html
+++ b/Inicio.html
@@ -15,9 +15,10 @@
         }
 
         span .titulo {
-            font-size: 2.25em;
+            font-size: 1.55em;
             border-bottom: 5px solid red;
             width: 100px;
+            font-weight: bold;
         }
 
         .imagenes {
@@ -46,9 +47,10 @@
             text-align: center;
             color: #e20613;
             border: 0.125rem solid #e20613;
-            width: 8em;
+            width: 13em;
             justify-content: center;
             margin: auto;
+            height: 3em;
         }
         .botonrojo{
             color:white;
@@ -102,7 +104,7 @@
             <img class="imagenes" src="./img/Transparencia_v2.png" alt="Transparencia_v2"><br>
         </article>
         <span>
-            <h2 class="titulo">PROYECTO PARA DONAR</h2>
+            <h2 class="titulo">PROYECTOS PARA DONAR</h2>
         </span>
         <section>
         <div class="columna">
