--- a/Inicio.html
+++ b/Inicio.html
@@ -15,20 +15,24 @@
         }
 
         span .titulo {
-            font-size: 1.55em;
+            font-size: 2.25em;
             border-bottom: 5px solid red;
             width: 100px;
-            font-weight: bold;
+            font-weight: bold;       
         }
 
         .imagenes {
             width: 100%;
             height: 10em;
         }
+        .transparencia{
+            width: 100%;
+            height: 15em;
+        }
 
         .columna {
             width: 30%;
-            padding-left: 4%;
+            padding-right: 4%;
         }
 
         section {
@@ -63,7 +67,7 @@
         }
 
         .campañas {
-            width: 50%;
+            width: 80%;
             padding-left: 10%;
             margin: auto;
         }
@@ -99,9 +103,9 @@
         </section><br>
         <div class="boton">
             <p>VER MÁS CAMPAÑAS</p>
-        </div><br>
+        </div><br><br><br>
         <article>
-            <img class="imagenes" src="./img/Transparencia_v2.png" alt="Transparencia_v2"><br>
+            <img class="transparencia" src="./img/Transparencia_v2.png" alt="Transparencia_v2"><br>
         </article>
         <span>
             <h2 class="titulo">PROYECTOS PARA DONAR</h2>
@@ -109,14 +113,14 @@
         <section>
         <div class="columna">
             <img class="imagenes" src="./img/RUM Atencion migrantes frontera.jpg" alt="Ayuda Ucrania">
-            <p class="subtitulo">Ayuda Crisis en Ucrania</p>
+            <p class="subtitulo">Ayuda Crisis en Ucrania</p><br>
             <div class="botonrojo">
                 <p>DONA</p>
             </div>
         </div>
         <div class="columna">
             <img class="imagenes" src="./img/mayores reducida.jpg" alt="Persona mayor">
-            <p class="subtitulo">Ninguna persona mayor sola</p>
+            <p class="subtitulo">Ninguna persona mayor sola</p><br>
             <div class="botonrojo">
                 <p>DONA</p>
             </div>
@@ -129,7 +133,7 @@
                 <p>DONA</p>
             </div>
         </div>
-        </section><br>
+        </section><br><br><br>
         <div class="boton">
             <p>VER MÁS PROYECTOS</p>
         </div><br>
