--- a/Inicio.html
+++ b/Inicio.html
@@ -19,7 +19,7 @@
             
         }
         .cabecera {
-            background-image: url("./imagene/Imagen1.png");
+            background-image: url("./img/cabecera.png");
             background-size: cover;
             background-repeat: no-repeat;
             height: 500px;
@@ -114,6 +114,7 @@
 
         .leerMas{
             color: red;
+            text-decoration: none;
         }
 
         .hr{
@@ -173,7 +174,7 @@
             <br>
             <div class="flex">
                 <div class="columna">
-                    <img class="noticiaImg" src="./imagene/flex1.jpg" alt="Noticia1">
+                    <img class="noticiaImg" src="./img/flex1.jpg" alt="Noticia1">
                     <p class="tituloNoticia">
                         Cruz Roja y LIBERA recogen y analizan más de 15 toneladas de basura [...]
                     </p>
@@ -184,10 +185,13 @@
                         la naturaleza.
                     </p>
                     <br>
-                    <a href="#"><p class="leerMas">Leer más</p></a>                    <hr class = "hr">
+                    <div class = "flex">
+                        <a href="#" class="leerMas">Leer más</a>  
+                    </div>
+                    <hr class = "hr">
                 </div>
                 <div class="columna">
-                    <img class="noticiaImg" src="./imagene/flex2.jpg" alt="Noticia2">
+                    <img class="noticiaImg" src="./img/flex2.jpg" alt="Noticia2">
                     <p class="tituloNoticia">
                         Cruz Roja Juventud entrega 42.000 juguetes en la campaña de ‘El jugue [...]
                     </p>
@@ -196,10 +200,10 @@
                         niños y niñas, con especial énfasis en las fiestas de final de año
                     </p>
                     <br><br><br><br><br>
-                    <a href="#"><p class="leerMas">Leer más</p></a>                    <hr class="hr">
+                    <a href="#" class="leerMas">Leer más</a>                    <hr class="hr">
                 </div>
                 <div class="columna">
-                    <img class="noticiaImg" src="./imagene/flex3.jpg" alt="Noticia3">
+                    <img class="noticiaImg" src="./img/flex3.jpg" alt="Noticia3">
                     <p class="tituloNoticia">
                         Un 70% de las personas que piden ayuda a Cruz Roja en la post pandemi [...]
                     </p>
@@ -208,8 +212,7 @@
                         ayuda directa para paliar la crisis derivada del conflicto, la COVID-19 y el cambio climático.
                     </p>
                     <br><br><br><br>
-                    <a href="#"><p class="leerMas">Leer más</p></a>
-                    <hr class="hr">
+                    <a href="#" class="leerMas">Leer más</a>                    <hr class="hr">
                 </div>
             </div>
             <br>
