Subidos cambios de Alberto Calzada

--- a/Inicio.html
+++ b/Inicio.html
@@ -43,5 +43,81 @@
             <a href="#"><img src="./img/flickr.png" alt=""></a>
         </div>
     </div>
+    <div class="campañas">
+        <div class="titulo1">
+            <h2 class="titulo">CAMPAÑAS</h2>
+            <div class="barra">
+            </div>
+        </div>
+        <section>
+            <div class="columna">
+                <img class="imagenes" src="./img/susderechosenjuego_2021.png" alt="Sus Derechos">
+                <p class="subtitulo">Sus Derechos en Juego</p>
+                <p class="xsize">¡Necesitamos 115.000 juguetes para niños y niñas! Desde Cruz Roja Juventud estamos
+                    tratando de conseguir
+                    que los niños y niñas que se encuentran en familias
+                    con dificultades puedan disfrutar de juegos y juguetes.</p>
+                <a href="#">
+                    <p class="leerMas">Leer más</p>
+                </a>
+            </div>
+            <div class="columna">
+                <img class="imagenes" src="./img/CR_cabecera_web_corts.jpg" alt="La Fuerza V">
+                <p class="subtitulo">#LafuerzaV</p>
+                <p class="xsize">Descubre una energía inmensa que nace de las personas y está por todas partes.
+                    Descubre la Fuerza del Voluntariado.</p><br>
+                <a href="#">
+                    <p class="leerMas">Leer más</p>
+                </a>
+            </div>
+            <div class="columna">
+                <img class="imagenes" src="./img/un-paisaje-en-la-cazuela.jpg" alt="Paisaje en la cazuela">
+                <p class="subtitulo">#UnPaisajeEnLaCazuela</p>
+                <p class="xsize">"Un paisaje en la cazuela” es una serie documental de
+                    Cruz Roja Española para fomentar una alimentación consciente en la Sociedad.</p><br>
+                <a href="#">
+                    <p class="leerMas">Leer más</p>
+                </a>
+            </div>
+        </section><br>
+        <div class="boton">
+            <p>VER MÁS CAMPAÑAS</p>
+        </div><br><br><br>
+        <article>
+            <img class="transparencia" src="./img/Transparencia_v2.png" alt="Transparencia_v2"><br><br>
+        </article>
+        <div class="titulo1">
+            <h2 class="titulo">PROYECTOS PARA DONAR</h2>
+            <div class="barra">
+            </div>
+        </div>
+        <section>
+            <div class="columna">
+                <img class="imagenes" src="./img/RUM Atencion migrantes frontera.jpg" alt="Ayuda Ucrania">
+                <p class="subtitulo">Ayuda Crisis en Ucrania</p><br>
+                <div class="botonrojo">
+                    <p>DONA</p>
+                </div>
+            </div>
+            <div class="columna">
+                <img class="imagenes" src="./img/mayores reducida.jpg" alt="Persona mayor">
+                <p class="subtitulo">Ninguna persona mayor sola</p><br>
+                <div class="botonrojo">
+                    <p>DONA</p>
+                </div>
+            </div>
+            <div class="columna">
+                <img class="imagenes" src="./img/49836943871_64305a12b3_o.jpg" alt="Covid">
+                <p class="subtitulo">Plan Responde de Cruz Roja frente al Coronavirus
+                </p>
+                <div class="botonrojo">
+                    <p>DONA</p>
+                </div>
+            </div>
+        </section><br><br><br>
+        <div class="boton">
+            <p>VER MÁS PROYECTOS</p>
+        </div><br>
+    </div>
 </body>
 </html>
