--- a/Inicio.html
+++ b/Inicio.html
@@ -119,5 +119,98 @@
             <p>VER MÁS PROYECTOS</p>
         </div><br>
     </div>
+    <div class="div-banner1" >
+        <div>
+            <div class="div-Cercadeti">
+                <h1><strong>CERCA DE TI</strong></h1>
+            </div>
+            <div class="div-Atencion">
+                <p><strong>Atención inmediata con solo pulsar un botón</strong></p>
+            </div>
+            <div class="div-Teleasistencia">
+                <a href="" class="a-banner1">Solicita Teleasistencia</a>
+            </div>
+        </div>
+    </div>
+    <div class="div-body">
+        <div class="video">
+            <div >
+                <h1><strong >CRUZ ROJA <span style="color:red">en YOUTUBE</span></strong></h1>
+            </div>
+            <div class="titulos"></div>
+            <div>
+                <p>
+                    ¿Qué sucede cuando unes la tecnología con la música? 'Banda Sonora Vital' se trata de un proyecto que
+                    persigue mejorar la memoria musical de personas con Alzheimer. Por sus valores sociales e innovación fue
+                    reconocida en los Premios Cruz Roja Tecnología Humanitaria, en la categoría de Impacto.
+                </p>
+            </div>
+            <div>
+                <iframe width="740" height="515" src="https://www.youtube.com/embed/En-bnWM4GdQ"
+                title="Banda Sonora Vital,  categoría Impacto de los Premios Cruz Roja Tecnología Humanitaria | Innovación"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
+            </div>
+        </div>
+        <div class="twitter">
+            <div>
+                <h1><strong>Twitter</strong></h1>
+            </div>
+            <div class="titulos"></div>
+            <div>
+                <blockquote class="twitter-tweet"><p lang="es" dir="ltr">[<a href="https://twitter.com/hashtag/AHORACruzRoja?src=hash&amp;ref_src=twsrc%5Etfw">#AHORACruzRoja</a>]🖥️<br><br>Somos expertos en Innovación con fines humanitarios, por eso, hemos desarrollado una aplicación que nos ayuda a estar mejor preparados en grandes servicios preventivos como carreras o maratones.<br><br>En el vídeo te contamos todas las claves. 👇 <a href="https://t.co/n7lnzqVMs6">pic.twitter.com/n7lnzqVMs6</a></p>&mdash; Cruz Roja Española (@CruzRojaEsp) <a href="https://twitter.com/CruzRojaEsp/status/1618502874119520256?ref_src=twsrc%5Etfw">January 26, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            </div>
+        </div>
+    </div>
+    <div class="div-atencion-logos">
+        <div>
+            <h1><strong >PORTALES DE ATENCION</strong></h1>
+        </div>
+        <div class="titulos"></div>
+        <div class="logos-container">
+            <!--200 200-->
+            <div>
+                <img src="./img/logos/teacompana.png" alt="teacompana" width="200px" height="200px">
+                <p>Cruz Roja TE ACOMPAÑA</p>
+                <a href="" style="text-decoration: none; color: red;">Ver más</a>
+            </div>
+            <div>
+                <img src="./img/logos/mirarlogo.png" alt="mirarlogo" width="200px" height="200px">
+                <p>Migrar.org</p>
+                <a href="" style="text-decoration: none; color: red;">Ver más</a>
+            </div>
+            <div>
+                <img src="./img/logos/crteescucha.png" alt="crteescucha" width="200px" height="200px">
+                <p>Cruz Roja Te Escucha</p>
+                <a href="" style="text-decoration: none; color: red;">Ver más</a>
+            </div>
+            <div>
+                <img src="./img/logos/acogimiento.png" alt="acogimiento" width="200px" height="200px">
+                <p>Acogimiento familiar</p>
+                <a href="" style="text-decoration: none; color: red;">Ver más</a>
+            </div>
+            <div>
+                <img src="./img/logos/multicanalcree.png" alt="multicanalcree" width="200px" height="200px">
+                <p>Orientación empleo</p>
+                <a href="" style="text-decoration: none; color: red;">Ver más</a>
+            </div>
+            <div>
+                <img src="./img/logos/sercuidadora.png" alt="sercuidadora" width="200px" height="200px">
+                <p>SerCuidadorA</p>
+                <a href="" style="text-decoration: none; color: red;">Ver más</a>
+            </div>
+            <div>
+                <img src="./img/logos/infoprevencion.png" alt="infoprevencion" width="200px" height="200px">
+                <p>Info Prevención VIH|ITS|TBC</p>
+                <a href="" style="text-decoration: none; color: red;">Ver más</a>
+            </div>
+        </div>
+    </div>
+    <div class="div-banner2">
+        <div class="solicita-info">
+            <a href="" class="a-banner2">SOLICITA MÁS INFORMACIÓN</a>
+        </div>
+    </div>
 </body>
 </html>
