--- a/Inicio.html
+++ b/Inicio.html
@@ -273,5 +273,77 @@
             </div>
         </div>
     </main>
+    <footer>
+        <section>
+            <div class="imagen">
+                <img alt="Cruz Roja" src="./img/logopequeno.png" width="115" height="30">
+            </div>
+            <div class="div1">
+                <h1>Conócenos</h1>
+                <p>Sobre Cruz Roja</p>
+                <p>Nuestra historia</p> 
+                <p>Transparencia</p>
+                <p>Calidad</p>
+                <p>Centro de documentación</p>            
+            </div>
+            <div class="div1">
+                <h1>Actualidad</h1>
+                <p>AHORA</p>
+                <p>Sala de prensa</p>
+                <p>Campañas</p>
+                <p>Cruz Roja en YouTube</p>
+                <p>Revista</p>
+                </p>
+            </div>
+            <div class="div1">
+                <h1>Nuestras Webs</h1>
+                <p>Cruz Roja TE ACOMPAÑA</p>
+                <p>La Fuerza V</p>
+                <p>Cruz Roja Juventud</p>
+                <p>Orientación empleo</p>
+                <p>Migrar.org</p>
+                <p>Info Prevención VIH ITS TBC</p>
+                <p>Multicanal SerCuidadorA</p>
+                <p>F. Tecnologías Sociales</p>
+                <p>Centros de Medios de Vida</p>
+            </div>
+            <div class="div2">
+                <ul>
+                <li><img alt="Perfil" src="./img/perfil.JPG" width="20" height="20"> Intranet</li>
+                <br>
+                <li><img alt="Tienda" src="./img/carrito.JPG" width="20" height="20"> Tienda Online</li>
+                <br>
+                <li><img alt="Denuncias" src="./img/megafono.JPG" width="20" height="20"> Canal denuncias</li>
+                <br>
+                <li><img alt="Licitaciones" src="./img/mazo.JPG" width="20" height="20"> Licitaciones</li>
+                <br>
+                <li><img alt="Trabajar" src="./img/maletin.JPG" width="20" height="20"> Trabaja con Cruz Roja</li>
+            </ul>
+                <div class="RRSS">
+                    <p>Siguenos</p>
+                    <img alt="Twitter" src="./img/twittergris.JPG" width="25" height="25">
+                    <img alt="Facebook" src="./img/facebookgris.JPG" width="25" height="25">
+                    <img alt="YouTube" src="./img/youtubegris.JPG" width="25" height="25">
+                    <img alt="Instagram" src="./img/instagramgris.JPG" width="25" height="25">
+                    <img alt="Flirck" src="./img/flickrgris.JPG" width="25" height="25">
+                </div>
+            </div>
+        </section>
+        <section2>
+            <p>© Cruz Roja Española 2023. Todos los derechos reservados <a href="https://www2.cruzroja.es/aviso-legal" target="_blank">aquí</a> para consultar los ASPECTOS LEGALES</p>
+            <p><a href="https://www2.cruzroja.es/agencia-de-colocacion" target="_blank">Agencia de Colocación autorizada con el número 9900000098</a></p>
+            <ul>
+                <li class="inline">
+                    <a title="Contacto" href="https://www2.cruzroja.es/contacto">Contacto</a>
+                </li>
+                <li class="inline">
+                    <a title="Política de privacidad" href="https://www2.cruzroja.es/politica-de-privacidad">Política de privacidad</a>
+                </li>
+                <li class="inline">
+                    <a title="Política de Cookies" href="https://www2.cruzroja.es/politica-de-cookies">Política de Cookies</a>
+                </li>
+            </ul>
+        </section2>
+    </footer>
 </body>
 </html>
