Cambios buenos de David

--- a/Inicio.html
+++ b/Inicio.html
@@ -102,6 +102,29 @@
             <div>
                 <p class="verMas">VER MÁS NOTICIAS</p>
             </div>
+            <br>
+            <div class = "cruzGris">
+                <div>
+                    <h3 class = "numeroPB">11.589.787</h3>
+                    <div>
+                        <p class = "textoPersonas">Personas beneficiarias al año</p>
+                    </div>
+                </div>
+                <div class = "divPersonasVoluntarias">
+                    <h3 class = "numeroPV">231.053</h3>
+                    <div>
+                        <p class = "textoPersonas">Personas voluntarias</p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <div class = "edicionPremios">
+            <div class="contenidoImagen2">
+                <p class = "textoImagen2">VII Edición de los Premios de Tecnología Humanitaria</p>
+                <p class="botonImg2">¡MÁS INFORMACIÓN!</p>
+            </div>
+        </div>
         </div>
         <div class="campañas">
             <div class="titulo1">
